syntax = "proto3";

package bob.v1;

import "google/protobuf/duration.proto";

option go_package = "github.com/manabie-com/backend/pkg/manabuf/bob/v1;bpb";

message PresignedPutObjectRequest {
  string prefix_name = 1;
  google.protobuf.Duration expiry = 2;    // maximum 30 minutes
  string file_extension = 3;
}

message PresignedPutObjectResponse {
  string presigned_url = 1;
  google.protobuf.Duration expiry = 2;    // maximum 30 minutes
  string name = 3;
  string download_url = 4;
}

message ResumableUploadURLRequest {
  string prefix_name = 1;
  google.protobuf.Duration expiry = 2;    // maximum 30 minutes
  string file_extension = 3;
  string allow_origin = 4;
  string content_type = 5; // to avoid directly download
}

message ResumableUploadURLResponse {
  string resumable_upload_url = 1;
  google.protobuf.Duration expiry = 2;    // maximum 30 minutes
  string file_name = 3;
  string download_url = 4;
}

message ResumableUploadURLRequestV2 {
  string prefix_name = 1;
  google.protobuf.Duration expiry = 2;    // maximum 30 minutes
  string file_extension = 3;
  string allow_origin = 4;
}

message ResumableUploadURLResponseV2 {
  string resumable_upload_url = 1;
  google.protobuf.Duration expiry = 2;    // maximum 30 minutes
  string file_name = 3;
  string download_url = 4;
}

service UploadService {
  rpc GeneratePresignedPutObjectURL(PresignedPutObjectRequest)
      returns (PresignedPutObjectResponse);
  rpc GenerateResumableUploadURL(ResumableUploadURLRequest)
      returns (ResumableUploadURLResponse);
  rpc GenerateResumableUploadURLV2(ResumableUploadURLRequestV2)
      returns (ResumableUploadURLResponseV2);
}
